force-app/main/default/objects/Organization_Department_Mgr__c/Organization_Department_Mgr__c.object-meta.xml
<CustomObject>
    <label>Master Department</label>
    <nameField>
        <displayFormat>DMGR-{00000}</displayFormat>
        <label>Master Department ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>