force-app/main/default/objects/Organization_Department_Mgr__c/fields/Dept_ID__c.field-meta.xml
<CustomField>
    <fullName>Dept_ID__c</fullName>
    <externalId>true</externalId>
    <label>Dept ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>