force-app/main/default/objects/Organization_Department_Mgr__c/fields/MGR_LVL_1_DESCR__c.field-meta.xml
<CustomField>
    <fullName>MGR_LVL_1_DESCR__c</fullName>
    <label>MGR LVL 1 DESCR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Dene Nation Industrial Service</fullName>
            </value>
            <value>
                <fullName>Environmental Services</fullName>
            </value>
            <value>
                <fullName>SK Sustainability Solutions</fullName>
            </value>
            <value>
                <fullName>#N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>