force-app/main/default/objects/Organization_Department_Mgr__c/fields/MGR_LVL_2_DESCR__c.field-meta.xml
<CustomField>
    <fullName>MGR_LVL_2_DESCR__c</fullName>
    <label>MGR LVL 2 DESCR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>#N/A</fullName>
            </value>
            <value>
                <fullName>Asset Mgmt &amp; Supply Chain</fullName>
            </value>
            <value>
                <fullName>Corp Dev &amp; Real Estate</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corp Sales &amp; Corp Marketing</fullName>
            </value>
            <value>
                <fullName>Dene Nation Industrial Service</fullName>
            </value>
            <value>
                <fullName>Discontinued Facilities</fullName>
            </value>
            <value>
                <fullName>Distribution Centers</fullName>
            </value>
            <value>
                <fullName>Environ Svcs Sales and Service</fullName>
            </value>
            <value>
                <fullName>Facilities and Facility Sales</fullName>
            </value>
            <value>
                <fullName>Indust Svcs Sales and Service</fullName>
            </value>
            <value>
                <fullName>National Trans</fullName>
            </value>
            <value>
                <fullName>Pricing &amp; Proposals</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen Oil</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen Supply</fullName>
            </value>
            <value>
                <fullName>SK Bulk Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>Trans Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>