force-app/main/default/objects/Organization_Department_Mgr__c/fields/MGR_LVL_3_DESCR__c.field-meta.xml
<CustomField>
    <fullName>MGR_LVL_3_DESCR__c</fullName>
    <label>MGR LVL 3 DESCR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Mgmt &amp; Supply Chain</fullName>
            </value>
            <value>
                <fullName>Broker Business</fullName>
            </value>
            <value>
                <fullName>Canada Industrial Svcs</fullName>
            </value>
            <value>
                <fullName>CHES Sales and Service</fullName>
            </value>
            <value>
                <fullName>Corp Dev &amp; Real Estate</fullName>
            </value>
            <value>
                <fullName>Corp Pricing &amp; Proposals</fullName>
            </value>
            <value>
                <fullName>Corp Sales &amp; Corp Marketing</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Daylighting Services Canada</fullName>
            </value>
            <value>
                <fullName>Dene Nation Industrial Service</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Distribution Centers</fullName>
            </value>
            <value>
                <fullName>Environmental Svcs Sls and Adm</fullName>
            </value>
            <value>
                <fullName>Facilities Group</fullName>
            </value>
            <value>
                <fullName>IS Sales &amp; Svc Sales &amp; Admin</fullName>
            </value>
            <value>
                <fullName>Lodging Services</fullName>
            </value>
            <value>
                <fullName>National Transportation</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas Field Services</fullName>
            </value>
            <value>
                <fullName>Oil Sands</fullName>
            </value>
            <value>
                <fullName>Project Services</fullName>
            </value>
            <value>
                <fullName>Refined &amp; Blended Product Sale</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen Supply</fullName>
            </value>
            <value>
                <fullName>SK Bulk Products &amp; Services1</fullName>
            </value>
            <value>
                <fullName>SK Facility Operations</fullName>
            </value>
            <value>
                <fullName>SK Pricing &amp; Proposals</fullName>
            </value>
            <value>
                <fullName>SK Sales and Service</fullName>
            </value>
            <value>
                <fullName>SKO Customer Service</fullName>
            </value>
            <value>
                <fullName>SKO Packaging &amp; Blending</fullName>
            </value>
            <value>
                <fullName>SKO Supply Chain</fullName>
            </value>
            <value>
                <fullName>Specialty Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>